--- a/privacy.html
+++ b/privacy.html
@@ -1,5 +1,5 @@
 <!doctype html><meta charset="utf-8">
-<title>プライバシーポリシー | 藤塚太鼓（テスト）</title>
+<title>プライバシーポリシー | 藤塚太鼓</title>
 <h1>プライバシーポリシー</h1>
 <p>藤塚太鼓（以下「当団体」）は、当団体が提供する出欠管理システム（以下「本サービス」）において、利用者の個人情報等を以下の方針で取り扱います。</p>
 
@@ -29,9 +29,9 @@
 <p>ご本人からの請求に応じて、法令に従い対応します。連絡先は下記をご覧ください。</p>
 
 <h2>7. 連絡先</h2>
-<p>藤塚太鼓 運営窓口：example@example.com</p>
+<p>藤塚太鼓 運営窓口：fujizukadaiko@gmail.com</p>
 
 <h2>8. 改定</h2>
 <p>本ポリシーは必要に応じて改定します。重要な変更は本ページまたは本サービス内で告知します。</p>
 
-<p>制定：2025年9月20日</p>
+<p>制定：2025年10月11日</p>
