初回実装：タイトルを「藤塚太鼓 出欠・予定」に変更
変更点:
- タイトルを「藤塚太鼓 出欠・予定」に変更

影響:
- 仕様変更なし（表示のみ）

--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>公演 出欠フォーム</title>
+  <title>藤塚太鼓 出欠・予定</title>
   
 <!-- ===== 設定（共通） v1：ページ先頭に固定 ===== -->
 <script>
   // 以後、このブロックだけを更新してください
   /* ===== 設定 ===== */
-  const FRONT_VERSION = "Front v4.0.8";  // 今の所のstable ver→v4.0.7
-  const LIFF_ID = "2008020568-2jVl00Rn";         // ←差し替え
-  const API_ENDPOINT = "https://script.google.com/macros/s/AKfycbwsbaQEWrD8xlstY5h-I6okPXzaJe8CTUl6sA8TgEO-_LpuXajivn_zkb-PwoNjlymTLA/exec";     // ←差し替え
+  const FRONT_VERSION = "v1.0.0";  // stable ver→v1.0.0
+  const LIFF_ID = "2008270687-9qV1G3yq";
+  const API_ENDPOINT = "https://script.google.com/macros/s/AKfycbzH4uGB-IhDg5Z2a1FbnZMi42I5Qp0VLWRdXThT3QbYcf59XgVnuPlgwWMKF2n2KPjy/exec";     // GAS v1.0.0
 
   // （オプション）設定チェック：重複定義や未設定を早期に気づけます
   (function(){
