--- a/index.html
+++ b/index.html
@@ -1165,7 +1165,7 @@
 
 <body>
   <header class="is-sticky">
-    <div class="siteTitle">出欠入力と予定確認</div>
+    <div class="siteTitle">藤塚太鼓 出欠・予定</div>
     <div class="ver" id="ver"></div>
   </header>
 
