--- a/privacy.html
+++ b/privacy.html
@@ -1,37 +1,56 @@
 <!doctype html><meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
 <title>プライバシーポリシー | 藤塚太鼓</title>
+
 <h1>プライバシーポリシー</h1>
 <p>藤塚太鼓（以下「当団体」）は、当団体が提供する出欠管理システム（以下「本サービス」）において、利用者の個人情報等を以下の方針で取り扱います。</p>
 
 <h2>1. 取得する情報</h2>
 <ul>
-  <li>LINEログインにより取得する情報：LINEユーザー識別子（sub / userId）、表示名、プロフィール画像URL</li>
-  <li>本サービス内で利用者が入力する情報：演奏者氏名、出欠回答、コメント、所属区分</li>
-  <li>端末情報：ブラウザ情報、Cookie/LocalStorage（下書き保存等に使用）</li>
+  <li>LINEログインにより取得する情報：LINEユーザー識別子（sub / userId）、表示名、プロフィール画像URL、（取得可能な場合）友だち状態</li>
+  <li>本サービス内で利用者が入力する情報：入力者氏名、演奏者氏名、所属区分、出欠回答、コメント</li>
+  <li>運用ログ：通知の送受信結果、時刻、HTTPステータス等</li>
+  <li>端末側の保存：ブラウザの LocalStorage（イベント一覧のキャッシュ、出欠の下書き保存など）</li>
 </ul>
 
 <h2>2. 利用目的</h2>
 <ul>
-  <li>公演の出欠管理、回答の集計、リマインド配信</li>
-  <li>問い合わせ対応、障害対応、品質改善</li>
+  <li>公演の出欠管理、回答の集計、リマインド等の通知配信</li>
+  <li>問い合わせ対応、障害対応、品質改善、不正防止</li>
+  <li>法令等に基づく対応</li>
 </ul>
 
-<h2>3. 共同利用・第三者提供</h2>
-<p>法令に基づく場合等を除き、第三者提供は行いません。運用上必要な範囲で、Google（Google Apps Script 等）にデータ処理を委託することがあります。</p>
+<h2>3. 第三者提供・委託</h2>
+<p>法令に基づく場合等を除き、第三者提供は行いません。運用上必要な範囲で以下の事業者にデータ処理を委託します。</p>
+<ul>
+  <li>Google LLC（Google Apps Script / Google スプレッドシート上での保管・処理）</li>
+  <li>LINEヤフー株式会社 / LINE Corporation（LINE Login / LIFF / Messaging API）</li>
+  <li>GitHub, Inc.（GitHub Pages によるフロントエンド配信。個人情報そのものは保存しません）</li>
+</ul>
+<p>これらのサービスは国外に所在するサーバで運用される場合があります。</p>
 
-<h2>4. 保管期間</h2>
-<p>目的達成に必要な期間保管し、不要となった情報は適切に削除します。退会・削除のご希望がある場合は下記窓口にご連絡ください。</p>
+<h2>4. 保管先・保管期間</h2>
+<ul>
+  <li>データは主として Google スプレッドシート上に保管します。</li>
+  <li>利用目的達成に必要な期間保管し、不要となった情報は適切に削除・匿名化します。退会・削除のご希望がある場合は下記窓口へご連絡ください。</li>
+</ul>
 
 <h2>5. 安全管理措置</h2>
-<p>アクセス制御、最小権限、通信の暗号化等、合理的な安全対策を講じます。</p>
+<p>アクセス権限の最小化、認証情報の適切管理、通信の暗号化（HTTPS/LINE）、ログ監査等、合理的な安全管理措置を講じます。</p>
 
-<h2>6. 開示・訂正・削除等の請求</h2>
-<p>ご本人からの請求に応じて、法令に従い対応します。連絡先は下記をご覧ください。</p>
+<h2>6. 利用者の権利と選択</h2>
+<ul>
+  <li>通知の停止：運営への依頼により停止できます。公式アカウントの友だち解除でも配信は届かなくなります。</li>
+  <li>個人情報の開示・訂正・削除・利用停止の請求：ご本人確認のうえ、法令に従い対応します。下記窓口へご連絡ください。</li>
+</ul>
 
-<h2>7. 連絡先</h2>
-<p>藤塚太鼓 運営窓口：fujizukadaiko@gmail.com</p>
+<h2>7. 未成年の方の情報</h2>
+<p>未成年の演奏者情報を取り扱う場合があります。保護者の同意を得たうえでご提供ください。</p>
 
-<h2>8. 改定</h2>
+<h2>8. 連絡先</h2>
+<p>藤塚太鼓 運営窓口：<a href="mailto:fujizukadaiko@gmail.com">fujizukadaiko@gmail.com</a></p>
+
+<h2>9. 改定</h2>
 <p>本ポリシーは必要に応じて改定します。重要な変更は本ページまたは本サービス内で告知します。</p>
 
 <p>制定：2025年10月11日</p>
