--- a/terms.html
+++ b/terms.html
@@ -2,7 +2,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>利用規約 | 藤塚太鼓</title>
 
-<h1>利用規約（簡易版）</h1>
+<h1>利用規約</h1>
 <p>本規約は、藤塚太鼓（以下「当団体」）が提供する出欠管理システム（以下「本サービス」）の利用条件を定めるものです。利用者は、本サービスを利用した時点で本規約に同意したものとみなします。</p>
 
 <h2>1. 利用内容</h2>
