--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   /* ===== 設定 ===== */
   const FRONT_VERSION = "v1.0.2";  // stable ver→v1.0.2
   const LIFF_ID = "2008270687-9qV1G3yq";
-  const API_ENDPOINT = "https://script.google.com/macros/s/AKfycbzXcSfGOxXEgXPzQMBylNDuwftZcs77B-_nhYc8NmSxwbymmhRdPzAWSUv-FS7sRjPc/exec;     // GAS v1.0.2
+  const API_ENDPOINT = "https://script.google.com/macros/s/AKfycbzXcSfGOxXEgXPzQMBylNDuwftZcs77B-_nhYc8NmSxwbymmhRdPzAWSUv-FS7sRjPc/exec";     // GAS v1.0.2
 
   const ENV_NS = (() => {
     const raw = [location.origin, LIFF_ID, API_ENDPOINT].join('|');
