--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   
               const D1_ORIGIN = D1_BASE || window.location.origin;
   
-  / === 更新履歴（アプリ内「変更履歴」表示用） ===
+  // === 更新履歴（アプリ内「変更履歴」表示用） ===
             window.__CHANGELOG_ENTRIES__ = [
                 {
                     date: "2026-01-04",
